# shelterbelts

./: .buildinfo  .gitignore  Makefile  README.md  check_categories.py  environment.yml  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js  sphinx-reading-durations.json  test_geographic_coordinates.py
.doctrees/: environment.pickle  index.doctree  modules.doctree
Archive/: DEA_STAC.py  NVT_notebook.py  agriwebb.py  anuclimate_daily.py  benchmark_imports.py  camera360.py  canopy_height_batch.py  chm_histogram.py  citations.py  directory_change.py  gdata_xe2_storage_report.pbs  gdata_xe2_storage_report.py  lidar.R  monaro.py  sentinel_copernicus_requests.py  sentinel_nci_original.py  subtiles.py  test_file.py  unzipping.sh
Dmitry/: dmitry_example.py
JOSS_Paper/: paper.bib  paper.md
PaddockTS_archive/: canopy_height.py
_sources/: index.rst.txt  modules.rst.txt
analysis/: accuracy_evaluation.py  barra_ag_crop.py  canopy_height_download.py  demo_year_parsing.py  evaluate_years.py  evaluation_categories.py  evaluation_distances.py  evaluation_edges.py  evaluation_lenient.py  filter_expanded_to_grazing.py  laz_cleanup.py  laz_inventory.py  laz_recent.py  linear_categories_stats.py
data/: demo_crowns_chm_res1_500m_Sep.tif  g2_017_training.csv  g2_019_binary_trees_150mx150m.tiff  g2_019_sentinel_150mx150m.pkl  g2_26729_DEM-H.tif  g2_26729_DEM-S_gullies.tif  g2_26729_DEM-S_ridges.tif  g2_26729_barra_daily.nc  g2_26729_buffer_categories.tif  g2_26729_chm_res10_filled.tif  g2_26729_cover_categories.tif  g2_26729_gullies_and_roads_buffer_categories.tif  g2_26729_hydrolines.tif  g2_26729_hydrolines_cropped.gpkg  g2_26729_linear_categories.tif  g2_26729_roads.tif  g2_26729_roads_cropped.gpkg  g2_26729_shelter_categories.tif  g2_26729_tree_categories.tif  g2_26729_worldcover.tif  g2_26729_worldcover_footprints.geojson  milgadara_1kmx1km_CHM_1m.tif  milgadara_50mx50m.laz
docs/: .gitignore  Makefile  README.md  requirements.txt
docs_new/: Makefile
examples/: .jupytext.toml  demo_all_indices.py
google_earth_engine/: shelterbelts-1m.js  shelterbelts_aus.js  shelterbelts_aus_exportable.js  shelterbeltsa_aus.js
models/: Koppen_Australia_cleaned2.gpkg  nn_4326_float32_s4_Aw.keras  nn_4326_float32_s4_BSh.keras  nn_4326_float32_s4_BSk.keras  nn_4326_float32_s4_BWh.keras  nn_4326_float32_s4_CFa.keras  nn_4326_float32_s4_Cfb.keras  nn_4326_float32_s4_all.keras  nn_noxy_df_4326_Aw.keras  nn_noxy_df_4326_BSh.keras  nn_noxy_df_4326_BSk.keras  nn_noxy_df_4326_BWh.keras  nn_noxy_df_4326_CFa.keras  nn_noxy_df_4326_Cfb.keras  nn_noxy_df_4326_all.keras  scaler_4326_float32_s4_Aw.pkl  scaler_4326_float32_s4_BSh.pkl  scaler_4326_float32_s4_BSk.pkl  scaler_4326_float32_s4_BWh.pkl  scaler_4326_float32_s4_CFa.pkl  scaler_4326_float32_s4_Cfb.pkl  scaler_4326_float32_s4_all.pkl  scaler_noxy_df_4326_Aw.pkl  scaler_noxy_df_4326_BSh.pkl  scaler_noxy_df_4326_BSk.pkl  scaler_noxy_df_4326_BWh.pkl  scaler_noxy_df_4326_CFa.pkl  scaler_noxy_df_4326_Cfb.pkl  scaler_noxy_df_4326_all.pkl
notebooks/: NVT.py  README.md  api_downloads.ipynb  api_downloads.py  demo_all_indices.py  demo_full_pipelines-local.py  demo_full_pipelines.py  drone.py  wolfram.py  (+6 more)
(+376 files in other folders)
