[project]
name = "shelterbelts"
version = "0.0.1"
authors = [
  { name="Christopher Bradley", email="christopher.bradley@anu.edu.au" },
]
description = "Using satellite imagery to identify shelterbelts and measure their impacts on agricultural productivity"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "rioxarray",
    "pandas",
    "scipy",
    "requests",
    "pysheds",
    "owslib",
    "pyproj",
    "matplotlib",
    "netcdf4",
    "odc-stac",
    "pystac_client",
    "planetary_computer",
    "geopandas",
    "windrose",
    "seaborn",
    "scikit-learn",
    "fiona",
    "openpyxl",
    "DAESIM_preprocess",
    "osmnx", 
    "xlsxwriter",
    "pyarrow",
    "tensorflow",
    "dask[distributed]",
    "cql2",
    "earthengine-api",
    "geemap",
    "tqdm",
    "awscli"
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupytext",
    "pytest",
    "twine",
    "build",
    "jupyterlab-lsp",
    "python-lsp-server[all]"
]

[project.urls]
Homepage = "https://github.com/ChristopherBradley/shelterbelts"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

# Suppress warnings from dependencies and internal code
[tool.pytest.ini_options]
markers = [
    "visual: tests that open matplotlib windows (run individually by name)"
]
filterwarnings = [
    # Third-party packages using old Pydantic v1 class-based Config style
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    # Binary incompatibility from dependencies compiled with different numpy versions
    "ignore:numpy.ndarray size changed:RuntimeWarning",
    # src/shelterbelts/apis/barra_daily.py:205 in wind_dataframe() - argmax() call
    "ignore:Behaviour of argmin/argmax:DeprecationWarning"
]
